# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/Categoria/Create": {
+        "/api/Categoria/Create": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -37,7 +37,7 @@
                 }
             }
         },
-        "/Categoria/DeleteByID/{id}": {
+        "/api/Categoria/DeleteByID/{id}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -68,7 +68,7 @@
                 }
             }
         },
-        "/Categoria/GetAll": {
+        "/api/Categoria/GetAll": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -90,7 +90,7 @@
                 }
             }
         },
-        "/Categoria/GetByID/{id}": {
+        "/api/Categoria/GetByID/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -121,7 +121,7 @@
                 }
             }
         },
-        "/FormaPago/Create": {
+        "/api/FormaPago/Create": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -154,7 +154,7 @@
                 }
             }
         },
-        "/FormaPago/DeleteByID/{id}": {
+        "/api/FormaPago/DeleteByID/{id}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -185,7 +185,7 @@
                 }
             }
         },
-        "/FormaPago/GetAll": {
+        "/api/FormaPago/GetAll": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -207,7 +207,7 @@
                 }
             }
         },
-        "/FormaPago/GetByID/{id}": {
+        "/api/FormaPago/GetByID/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -238,7 +238,7 @@
                 }
             }
         },
-        "/Product/Create": {
+        "/api/Product/Create": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -271,7 +271,7 @@
                 }
             }
         },
-        "/Product/DeleteByID/{id}": {
+        "/api/Product/DeleteByID/{id}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -302,7 +302,7 @@
                 }
             }
         },
-        "/Product/GetAll": {
+        "/api/Product/GetAll": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -324,7 +324,7 @@
                 }
             }
         },
-        "/Product/GetByID/{id}": {
+        "/api/Product/GetByID/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -355,7 +355,7 @@
                 }
             }
         },
-        "/Product/Update/{id}": {
+        "/api/Product/Update/{id}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -395,7 +395,7 @@
                 }
             }
         },
-        "/ProductComp/Create": {
+        "/api/ProductComp/Create": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -414,7 +414,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.ProductoCompuesto"
+                            "$ref": "#/definitions/dto.ProductoComp"
                         }
                     }
                 ],
@@ -428,7 +428,7 @@
                 }
             }
         },
-        "/ProductComp/DeleteByID/{id}": {
+        "/api/ProductComp/DeleteByID/{id}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -459,7 +459,7 @@
                 }
             }
         },
-        "/ProductComp/GetAll": {
+        "/api/ProductComp/GetAll": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -481,7 +481,7 @@
                 }
             }
         },
-        "/ProductComp/GetByID/{id}": {
+        "/api/ProductComp/GetByID/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -511,6 +511,163 @@
                     }
                 }
             }
+        },
+        "/api/Sucursal/Create": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sucursal"
+                ],
+                "summary": "Create a new sucursal",
+                "parameters": [
+                    {
+                        "description": "Sucursal data",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.Sucursal"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Body-types_Sucursal"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/Sucursal/DeleteByID/{id}": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sucursal"
+                ],
+                "summary": "Delete a sucursal by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Sucursal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Body-string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/Sucursal/GetAll": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sucursal"
+                ],
+                "summary": "Get all Sucursales",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Body-array_types_Sucursal"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/Sucursal/GetByID/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sucursal"
+                ],
+                "summary": "Get a sucursal by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Sucursal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Body-types_Sucursal"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/Sucursal/Update/{id}": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sucursal"
+                ],
+                "summary": "Update a sucursal",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Sucursal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Sucursal data",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.Sucursal"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Body-types_Sucursal"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -520,11 +677,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "producto_compuesto": {
-                    "$ref": "#/definitions/types.Producto"
+                "productoComponenteID": {
+                    "type": "integer"
                 },
-                "producto_principal": {
-                    "$ref": "#/definitions/types.Producto"
+                "productoPrincipalID": {
+                    "type": "integer"
                 }
             }
         },
@@ -568,6 +725,17 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/types.ProductoCompuesto"
+                    }
+                }
+            }
+        },
+        "pkg.Body-array_types_Sucursal": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.Sucursal"
                     }
                 }
             }
@@ -617,6 +785,14 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/types.ProductoCompuesto"
+                }
+            }
+        },
+        "pkg.Body-types_Sucursal": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/types.Sucursal"
                 }
             }
         },
@@ -671,11 +847,37 @@
                 "id": {
                     "type": "integer"
                 },
+                "productoComponente": {
+                    "$ref": "#/definitions/types.Producto"
+                },
                 "productoComponenteID": {
                     "type": "integer"
                 },
+                "productoPrincipal": {
+                    "$ref": "#/definitions/types.Producto"
+                },
                 "productoPrincipalID": {
                     "type": "integer"
+                }
+            }
+        },
+        "types.Sucursal": {
+            "type": "object",
+            "properties": {
+                "activo": {
+                    "type": "boolean"
+                },
+                "direccion": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "nombre": {
+                    "type": "string"
+                },
+                "telefono": {
+                    "type": "string"
                 }
             }
         }
